# Coursework5_Employers_and_vacancies

./: README.md  creating_database.sql  pyproject.toml
src/: get_data_and_push.py  main.py
src/classes/: database_manager.py  headhunter_api.py
